[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-rfc3230-digest-header-middleware"
version = "1.0.0"
description = "Implements a middleware that protects FastAPI endpoints with RFC 3230 Digest headers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.121.3", "rfc3230-digest-headers>=1.1.2"]
authors = [{ name = "Marian Plivelic", email = "marianplivelic@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
keywords = ["fastapi", "middleware", "rfc3230", "digest-header"]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.1", "ruff>=0.14.5"]

[tool.hatch.build.targets.sdist]
include = [
    "fastapi_rfc3230_digest_header_middleware/**",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["fastapi_rfc3230_digest_header_middleware"]
